Refatorando endpoints