@@ -3,7 +3,6 @@ package com.carbigdata.api.assembler;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,11 +11,12 @@ import org.springframework.stereotype.Component;
 import com.carbigdata.api.model.OcorrenciaModel;
 import com.carbigdata.domain.model.Ocorrencia;
 
+import lombok.AllArgsConstructor;
 
+@AllArgsConstructor(onConstructor = @__(@Autowired))
 @Component
 public class OcorrenciaModelAssembler {
 
-	@Autowired
 	private ModelMapper modelMapper;
 	
 	public OcorrenciaModel toModel(Ocorrencia ocorrencia) {
@@ -25,8 +25,8 @@ public class OcorrenciaModelAssembler {
 	
 	public List<OcorrenciaModel> toCollectionModel(Collection<Ocorrencia> ocorrencias) {
 		return ocorrencias.stream()
-				.map(ocorrencia -> toModel(ocorrencia))
-				.collect(Collectors.toList());
+				.map(this::toModel)
+				.toList();
 	}
 	
 }
